--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,4 +1,4 @@
-.promo {
+.promo__structure {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,6 @@
     height: 100%;
     min-height: 636px;
     padding-bottom: 82px;
-    margin: 0;
   }
 }
 
