--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,9 +1,9 @@
 <div class="page__centerer">
   <header class="header">
-    <nav class="navigation">
-      <div class="navigation__logo-container">
-        <a href="index.html" class="navigation__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}></a>
-      </div>
+    <div class="header__logo-container">
+      <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}></a>
+    </div>
+    <nav class="navigation navigation--closed  navigation--nojs">
       <button class="navigation__menu-button" type="button">
         <span class="visually-hidden">Кнопка вызова меню</span>
       </button>
