--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -46,6 +46,14 @@
   }
 }
 
+.header__logo-link:hover {
+  opacity: 0.8;
+}
+
+.header__logo-link:active {
+  opacity: 0.6;
+}
+
 .header__logo-link::before {
   @media (--narrow-vp) {
     content: "";
