--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,6 +1,6 @@
 .example {
   position: relative;
-  padding-top: 25px;
+  padding-top: 47px;
 }
 
 .example::after {
@@ -11,7 +11,7 @@
   left: 0;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 47px);
 
   @media (--not-wide-vp) {
     background-color: var(--example-background-color);
