--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-bottom: 20px;
+  padding-top: 20px;
 
   @media (--middle-vp) {
     padding-bottom: 49px;
@@ -150,6 +150,47 @@
   width: 24px;
   height: 12px;
   margin-left: 15px;
+
+  @media (--middle-vp) {
+    margin-left: 25px;
+  }
+
+  @media (--wide-vp) {
+    margin-left: 28px;
+  }
+}
+
+.nutrition-programm__link:hover::after {
+  content: "";
+  display: inline-block;
+  background-image: url("../../icons/sprite.svg#arrow-active");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 33px;
+  height: 10px;
+  margin-left: 15px;
+
+  @media (--middle-vp) {
+    margin-left: 25px;
+  }
+
+  @media (--wide-vp) {
+    margin-left: 28px;
+  }
+}
+
+.nutrition-programm__link:active::after {
+  content: "";
+  display: inline-block;
+  background-image: url("../../icons/sprite.svg#arrow-active");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 33px;
+  height: 10px;
+  margin-left: 15px;
+  opacity: 0.3;
 
   @media (--middle-vp) {
     margin-left: 25px;
