--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -33,6 +33,14 @@
   flex-wrap: nowrap;
   text-decoration: none;
 
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
   @media (--middle-vp) {
     display: flex;
     justify-content: space-between;
@@ -44,14 +52,6 @@
     justify-content: space-between;
     max-width: 202px;
   }
-}
-
-.header__logo-link:hover {
-  opacity: 0.8;
-}
-
-.header__logo-link:active {
-  opacity: 0.6;
 }
 
 .header__logo-link::before {
