--- a/source/sass/blocks/background-promo.scss
+++ b/source/sass/blocks/background-promo.scss
@@ -13,6 +13,12 @@
   background-size: cover;
   z-index: -1;
 
+  @media (--narrow-vp) {
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% + 40px);
+  }
+
   @media (--middle-vp) {
     display: none;
   }
