--- a/source/sass/blocks/background-promo.scss
+++ b/source/sass/blocks/background-promo.scss
@@ -14,9 +14,7 @@
   z-index: -1;
 
   @media (--narrow-vp) {
-    left: 50%;
-    transform: translateX(-50%);
-    width: calc(100% + 40px);
+    left: 0;
   }
 
   @media (--middle-vp) {
