--- a/source/sass/blocks/form-cat-program.scss
+++ b/source/sass/blocks/form-cat-program.scss
@@ -1,17 +1,61 @@
 .form-cat-program {
+  --content-indent: calc(20px + (10vw - 32px) / 4.48);
   display: flex;
   flex-direction: column;
-  gap: 26px;
   padding: 0;
   padding-top: 39px;
+
+  @media (--not-narrow-vp) {
+    padding-top: 66px;
+  }
 
   @media (--wide-vp) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 61px;
-    row-gap: 61px;
+    max-width: 1440px;
+    margin: 0 auto;
   }
   --mark-border-color: #cdcdcd;
+}
+
+.form-cat-programm__cat-parameters {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  margin-bottom: 27px;
+}
+
+.form-cat-program__border {
+  border-bottom: 1px solid #d9d9d9;
+
+  @media (--not-narrow-vp) {
+    border: none;
+  }
+}
+
+.form-cat-program__button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  margin-bottom: 32px;
+
+  @media (--middle-vp) {
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 61px;
+    margin-bottom: 72px;
+  }
+
+  @media (--wide-vp) {
+    flex-direction: row;
+    justify-content: flex-start;
+    grid-column: 1/-1;
+    gap: 81px;
+    margin-bottom: 82px;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .form-cat-program__button {
@@ -24,9 +68,111 @@
   border: none;
   padding: 10px;
   background-color: var(--button-color);
-  max-width: 558px;
+  max-width: 568px;
+  flex: 1 0 auto;
+
+  @media (--middle-vp) {
+    max-width: 282px;
+  }
 }
 
+.form-cat-program__comment-label {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  text-align: start;
+
+  @media (--middle-vp) {
+    margin-bottom: 65px;
+  }
+
+  @media (--wide-vp) {
+    grid-column: 1/-1;
+    margin-bottom: 67px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+.form-cat-program__group-title {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
+  padding: 25px 0 36px 0;
+
+  @media (--not-narrow-vp) {
+    white-space: nowrap;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 76px;
+  }
+
+  @media (--wide-vp) {
+    grid-column: 1/-1;
+  }
+}
+
+.form-cat-program__group-title--additional {
+  @media (--not-narrow-vp) {
+    margin-bottom: 57px;
+  }
+}
+
+.form-cat-program__group-title-text {
+  flex: 1 0 auto;
+  max-width: 190px;
+  padding-right: 21px;
+  padding-left: var(--content-indent);
+
+  @media (--middle-vp) {
+    padding-left: 39px;
+    padding-right: 41px;
+  }
+}
+
+.form-cat-program__group-title-text--contacts {
+  @media (--not-narrow-vp) {
+    max-width: 512px;
+  }
+}
+
+.form-cat-program__group-title::after {
+  content: "";
+  top: 50%;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: var(--line-color);
+}
+
+
+.form-cat-program__group-title::before {
+  content: "";
+  display: block;
+  top: 50%;
+  width: 0;
+  height: 0;
+  background-color: var(--line-color);
+
+  @media (--middle-vp) {
+    width: 30px;
+    height: 2px;
+  }
+
+  @media (--wide-vp) {
+    width: 70px;
+    height: 2px;
+  }
+}
 
 .form-cat-program__comment {
   box-sizing: border-box;
@@ -43,4 +189,15 @@
   font-weight: 400;
   color: var(--base-font-color);
   text-transform: uppercase;
+}
+
+.form-cat-program__requireds-description {
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0;
+  text-align: center;
+
+  @media (--middle-vp) {
+    font-size: 16px;
+  }
 }
