--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -17,4 +17,9 @@
   --footer-background-color: #f2f2f2;
   --alternative-menu-text-color: #ffffff;
   --menu-line-color: #68b738;
+  --catalog-title-border-color: #d9d9d9;
+  --product-card-border-color: #ebebeb;
+  --product-card-bg-color: #f2f2f2;
+  --product-card__item-boreder-color: #cdcdcd;
+  --additionals-border-color: #cdcdcd;
 }
