--- a/source/sass/blocks/inputs-group.scss
+++ b/source/sass/blocks/inputs-group.scss
@@ -4,18 +4,55 @@
   flex-wrap: wrap;
   gap: 20px;
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
   border: none;
 
+  @media (--wide-vp) {
+    margin: 0;
+  }
+}
+
+.inputs-group.inputs-group--type_cat {
+  margin-bottom: 27px;
+
+  @media (--not-narrow-vp) {
+    border: none;
+  }
+
   @media (--middle-vp) {
-    width: 100%;
+    margin-bottom: 72px;
+  }
+
+  @media (--wide-vp) {
+    grid-column: 1/2;
+  }
+}
+
+.inputs-group.inputs-group--type_program {
+  position: relative;
+  margin: 0 0 20px;
+  padding-top: 20px;
+
+  @media (--not-narrow-vp) {
+    border: 1px solid var(--input-border-color);
+    padding: 25px 28px 25px;
+  }
+
+  @media (--middle-vp) {
+    grid-column: 1/-1;
+    margin-bottom: 71px;
+  }
+
+  @media (--wide-vp) {
+    grid-column: 2/3;
+    margin-bottom: 69px;
   }
 }
 
 .inputs-group.inputs-group--type_contacts {
   @media (--middle-vp) {
-    border: transparent;
+    border: none;
+    margin-bottom: 65px;
   }
 
   @media (--wide-vp) {
@@ -23,34 +60,20 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 78px;
+    margin-bottom: 69px;
+    padding: 0 110px;
   }
 }
-
-.inputs-group.inputs-group--type_program {
-  position: relative;
-  margin: 0;
-
-  @media (--not-narrow-vp) {
-    border: 1px solid var(--input-border-color);
-    padding-left: 28px;
-  }
-
-  @media (--middle-vp) {
-    grid-column: 1/-1;
-  }
-
-  @media (--wide-vp) {
-    grid-column: 2/3;
-  }
-}
-
 
 .inputs-group.inputs-group--type_additionals {
+  margin-bottom: 34px;
+
   @media (--middle-vp) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 32px;
     border: transparent;
+    margin-bottom: 54px;
   }
 
   @media (--wide-vp) {
@@ -58,16 +81,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-}
-
-.inputs-group.inputs-group--type_cat {
-  @media (--middle-vp) {
-    border-color: transparent;
-  }
-
-  @media (--wide-vp) {
-    grid-column: 1/2;
+    padding: 0 110px;
+    margin-bottom: 61px;
   }
 }
 
@@ -185,73 +200,4 @@
   width: 30px;
   height: 30px;
   box-shadow: inset 0 0 0 1px var(--mark-border-color);
-}
-
-.inputs-group__title {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-grow: 1;
-  font-family: "Oswald", sans-serif;
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 400;
-  text-align: left;
-  width: 100%;
-  padding: 25px 0 36px 0;
-
-  @media (--not-narrow-vp) {
-    white-space: nowrap;
-  }
-}
-
-.inputs-group__title::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: -20px;
-  display: block;
-  width: 99px;
-  height: 2px;
-  background-color: var(--line-color);
-
-  @media (--middle-vp) {
-    width: 50%;
-    right: -30px;
-  }
-
-  @media (--wide-vp) {
-    top: 50%;
-    right: -110px;
-    width: 50%;
-    height: 2px;
-    margin-left: 35px;
-  }
-}
-
-
-.inputs-group__title::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 50%;
-  right: -20px;
-  width: 0;
-  height: 0;
-  background-color: var(--line-color);
-
-  @media (--middle-vp) {
-    left: -30px;
-    width: 30px;
-    height: 2px;
-    margin-right: 37px;
-  }
-
-  @media (--wide-vp) {
-    left: -110px;
-    width: 70px;
-    height: 2px;
-    margin-right: 40px;
-  }
 }
