--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -12,7 +12,6 @@
 
   @media (--middle-vp) {
     flex-wrap: wrap;
-    padding: 19px 0 10px 0;
   }
 }
 
@@ -166,11 +165,13 @@
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
+    padding: 8px 0 8px;
   }
 
   @media (--wide-vp) {
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
+    padding: 8px 0 8px;
   }
 }
