--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -3,19 +3,19 @@
   grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
   column-gap: 40px;
   row-gap: 25px;
-  padding: 41px 0 0;
-  margin: 0;
+  padding: 0;
+  margin: 0 auto;
   list-style: none;
 
-  @media (--not-narrow-vp) {
-    padding-top: 165px;
-  }
-
   @media (--middle-vp) {
+    padding: 0 30px 68px;
     column-gap: 60px;
+    row-gap: 141px;
   }
 
   @media (--wide-vp) {
+    padding: 0 110px 76px;
     column-gap: 80px;
+    row-gap: 144px;
   }
 }
