--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -1,24 +1,26 @@
 .show-more {
   position: relative;
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 23px;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
   text-align: center;
-  padding: 78px 0 25px;
+  padding: 72px 20px 25px;
   border-top: 1px solid #ebebeb;
+  border-bottom: 1px solid #ebebeb;
 
   @media (--not-narrow-vp) {
     border: 1px solid #f2f2f2;
+    padding: 161px 30px 38px;
   }
 
   @media (--middle-vp) {
-    box-sizing: border-box;
     width: 100%;
     max-width: 324px;
-    min-height: 429px;
-    padding: 161px 30px 41px;
+    min-height: 430px;
   }
 
   @media (--wide-vp) {
@@ -26,20 +28,44 @@
   }
 }
 
+.show-more__text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .show-more__important-text {
   font-size: 16px;
   line-height: 20px;
   color: #111111;
   margin: 0;
+
+  @media (--not-narrow-vp) {
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  @media (--middle-vp) {
+    padding: 0 70px;
+  }
+
+  @media (--wide-vp) {
+    padding: 0 25px;
+  }
 }
 
 .show-more__regular-text {
-  flex-grow: 1;
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   color: var(--base-font-color);
   margin: 0;
+
+  @media (--not-narrow-vp) {
+    flex-grow: 1;
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 .show-more__button {
@@ -55,16 +81,20 @@
 }
 
 .show-more::before {
-  content: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23D3D3D3' stroke-width='2' d='M15 0v30M30 15H0'/%3E%3C/svg%3E");
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, 50%);
+  content: "";
   display: block;
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 30px;
   height: 30px;
+  background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23D3D3D3' stroke-width='2' d='M15 0v30M30 15H0'/%3E%3C/svg%3E");
+  background-size: cover;
+  background-position: center;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
+    top: 52px;
     width: 60px;
     height: 60px;
   }
