--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -29,30 +29,33 @@
   font-weight: 400;
   color: #000000;
   text-align: start;
-  margin: 0 0 37px;
+  margin: 0;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
     font-size: 60px;
     line-height: 60px;
     text-align: left;
-    margin-bottom: 54px;
-  }
-
-  @media (--wide-vp) {
-    font-size: 60px;
-    line-height: 60px;
-    text-align: left;
-    margin-bottom: 56px;
   }
 }
 
 .page__form-title-container {
+  display: flex;
+  flex-direction: column;
+  gap: 37px;
   box-sizing: border-box;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 27px  0 0;
+  padding: 27px  0 39px;
 
   @media (--narrow-vp) {
     border-top: 1px solid #d9d9d9;
+  }
+
+  @media (--middle-vp) {
+    gap: 52px;
+    padding: 75px 0 69px;
+  }
+
+  @media (--wide-vp) {
+    gap: 54px;
+    padding: 85px 110px 72px;
   }
 }
